<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <TextView
            android:id="@+id/country_text"
            android:text="@string/country_with_colon"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/country"
            android:text="@string/country_placeholder"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:layout_marginStart="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/country_text"
            app:layout_constraintLeft_toRightOf="@id/country_text"/>

        <TextView
            android:id="@+id/country_code_text"
            android:text="@string/country_code_with_colon"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/country_text"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/country_code"
            android:text="@string/country_code_placeholder"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:layout_marginStart="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/country_code_text"
            app:layout_constraintLeft_toRightOf="@id/country_code_text"/>

        <TextView
            android:id="@+id/lat_text"
            android:text="@string/lat_with_colon"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/country_code_text"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/lat"
            android:text="@string/coordinate_placeholder"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:layout_marginStart="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/lat_text"
            app:layout_constraintLeft_toRightOf="@id/lat_text"/>

        <TextView
            android:id="@+id/lon_text"
            android:text="@string/lon_with_colon"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/lat_text"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/lon"
            android:text="@string/coordinate_placeholder"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:layout_marginStart="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/lon_text"
            app:layout_constraintLeft_toRightOf="@id/lon_text"/>

        <TextView
            android:id="@+id/confirmed_text"
            android:text="@string/confirmed_with_colon"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/lon_text"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/confirmed"
            android:text="@string/zero"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:layout_marginStart="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/confirmed_text"
            app:layout_constraintLeft_toRightOf="@id/confirmed_text"/>

        <TextView
            android:id="@+id/deaths_text"
            android:text="@string/deaths_with_colon"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/confirmed_text"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/deaths"
            android:text="@string/zero"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:layout_marginStart="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/deaths_text"
            app:layout_constraintLeft_toRightOf="@id/deaths_text"/>

        <TextView
            android:id="@+id/recovered_text"
            android:text="@string/recovered_with_colon"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/deaths_text"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/recovered"
            android:text="@string/zero"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:layout_marginStart="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/recovered_text"
            app:layout_constraintLeft_toRightOf="@id/recovered_text"/>

        <TextView
            android:id="@+id/active_text"
            android:text="@string/active_with_colon"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/recovered_text"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/active"
            android:text="@string/zero"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:layout_marginStart="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/active_text"
            app:layout_constraintLeft_toRightOf="@id/active_text"/>

        <TextView
            android:id="@+id/date_text"
            android:text="@string/date_with_colon"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/active_text"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/date"
            android:text="@string/date_placeholder"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:layout_marginStart="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/date_text"
            app:layout_constraintLeft_toRightOf="@id/date_text"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>